# laxlang

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/ast/: mod.rs
src/codegen/: mod.rs
src/errors/: mod.rs
src/features/: live_reload.rs
src/lexer/: mod.rs
src/parser/: grammar.lalrpop  mod.rs
src/semantic/: mod.rs
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: laxlang.tmLanguage.json
